sh_binary(
    name = "example-e2e",
    srcs = [
        "example-e2e.sh",
    ],
    data = glob([
        "shared/*",
        "*.js",
    ]) + [
        "//:package.json",
        "//:yarn.lock",
        "//aio:package.json",
        "//aio:yarn.lock",
        "//aio/content/examples",
        "//aio/tools",
        "//aio/scripts",
        "//tools:yarn/check-yarn.js",
        "//tools:postinstall-patches.js",
        "//tools/npm",
    ],
)
